force-app/main/default/objects/Participant__c/fields/Adult__c.field-meta.xml
<CustomField>
    <fullName>Adult__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adult</label>
    <type>Checkbox</type>
</CustomField>