force-app/main/default/objects/Participant__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Age</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>