force-app/main/default/objects/Participant__c/fields/Alternative_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Phone_Number__c</fullName>
    <label>Alternative Phone Number</label>
    <type>Phone</type>
</CustomField>