force-app/main/default/objects/Participant__c/fields/Birth_Day__c.field-meta.xml
<CustomField>
    <fullName>Birth_Day__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>		
    <label>Birth Day</label>
    <length>2</length>
    <type>Text</type>
</CustomField>