force-app/main/default/objects/Participant__c/fields/Birth_Year__c.field-meta.xml
<CustomField>
    <fullName>Birth_Year__c</fullName>
    <label>Birth Year</label>
    <length>4</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>