force-app/main/default/objects/Participant__c/fields/Block_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Block_Outreach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block Outreach</label>
    <type>Checkbox</type>
</CustomField>