force-app/main/default/objects/Participant__c/fields/Condition_of_Interest_s__c.field-meta.xml
<CustomField>
    <fullName>Condition_of_Interest_s__c</fullName>
    <label>Condition of Interest(s)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>