force-app/main/default/objects/Participant__c/fields/Conditions__c.field-meta.xml
<CustomField>
    <fullName>Conditions__c</fullName>
    <description>If Conditions exist for this Participant, then this field &gt;0</description>
    <label>Conditions</label>
    <summaryFilterItems>
        <field>Therapeutic_Area_Patient__c.Condition_Of_Interest_Order__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Therapeutic_Area_Patient__c.Participant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>