force-app/main/default/objects/Participant__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Participants</relationshipLabel>
    <relationshipName>Participants</relationshipName>

    <type>Lookup</type>
</CustomField>