force-app/main/default/objects/Participant__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <label>Date of Birth</label>
    <length>10</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>