force-app/main/default/objects/Participant__c/fields/Day_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Birth__c</fullName>
    <label>Day of Birth</label>
    <type>Date</type>
</CustomField>