force-app/main/default/objects/Participant__c/fields/Delegate_Consent_SMS__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Consent_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delegate Consent SMS</label>
    <type>Checkbox</type>
</CustomField>