force-app/main/default/objects/Participant__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Email</label>

    <type>Email</type>
</CustomField>