force-app/main/default/objects/Participant__c/fields/Emancipation_in_progress__c.field-meta.xml
<CustomField>
    <fullName>Emancipation_in_progress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emancipation in progress</label>
    <type>Checkbox</type>
</CustomField>