force-app/main/default/objects/Participant__c/fields/Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Enrolled__c</fullName>
    <label>Enrolled</label>
    <type>Date</type>
</CustomField>