force-app/main/default/objects/Participant__c/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0- Prefer not to say</fullName>
            </value>
            <value>
                <fullName>1- Hispanic/Latino</fullName>
            </value>
            <value>
                <fullName>2- American Indian/Alaskan Native</fullName>
            </value>
            <value>
                <fullName>3- Asian</fullName>
            </value>
            <value>
                <fullName>4- African-American/Black</fullName>
            </value>
            <value>
                <fullName>5- Native Hawaiian/Other Pacific Islander</fullName>
            </value>
            <value>
                <fullName>6- Caucasian/White</fullName>
            </value>
            <value>
                <fullName>7- Two or more races</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>