force-app/main/default/objects/Participant__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Participant&#39;s First Name can be removed from layout for PI compliance purposes</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Participant&#39;s First Name</inlineHelpText>
    <label>First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>