force-app/main/default/objects/Participant__c/fields/Follow_Up_Period_Started__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Period_Started__c</fullName>
    <label>Follow Up Period Started</label>
    <type>Date</type>
</CustomField>