force-app/main/default/objects/Participant__c/fields/fphone__c.field-meta.xml
<CustomField>
    <fullName>fphone__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone__c, &quot;(&quot;, &quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;[&quot;,&quot;&quot;),&quot;]&quot;,&quot;&quot;),&quot;+&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;)</formula>
    <label>fphone</label>
    <type>Text</type>
</CustomField>