force-app/main/default/objects/Participant__c/fields/Gender_Technical__c.field-meta.xml
<CustomField>
    <fullName>Gender_Technical__c</fullName>
    <label>Gender(Technical)</label>
    <length>7</length>
    <type>Text</type>
</CustomField>