force-app/main/default/objects/Participant__c/fields/Has_Past_Studies__c.field-meta.xml
<CustomField>
    <fullName>Has_Past_Studies__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks if Participant has Enrollment&#39;s in Alumni statuses</description>
    <label>Has Past Studies</label>
    <type>Checkbox</type>
</CustomField>