force-app/main/default/objects/Participant__c/fields/Has_Studies__c.field-meta.xml
<CustomField>
    <fullName>Has_Studies__c</fullName>
    <description>Checks if Participant in Prospect mode</description>
    <formula>OR( Has_Studies_In_Progress__c , Has_Past_Studies__c )</formula>
    <label>Has Studies</label>
    <type>Checkbox</type>
</CustomField>