force-app/main/default/objects/Participant__c/fields/Has_Studies_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Has_Studies_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks if Participant has not completed Enrollment&#39;s</description>
    <label>Has Studies In Progress</label>
    <type>Checkbox</type>
</CustomField>