force-app/main/default/objects/Participant__c/fields/Health_care_proxy_is_needed__c.field-meta.xml
<CustomField>
    <fullName>Health_care_proxy_is_needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health care proxy is needed</label>
    <type>Checkbox</type>
</CustomField>