force-app/main/default/objects/Participant__c/fields/IsCountry_NOT_Eligible_for_Emails__c.field-meta.xml
<CustomField>
    <fullName>IsCountry_NOT_Eligible_for_Emails__c</fullName>
    <formula>NOT(Mailing_Country_Code__c=&#39;US&#39; || Mailing_Country_Code__c=&#39;RU&#39; || Mailing_Country_Code__c=&#39;CA&#39; || Mailing_Country_Code__c=&#39;PL&#39; || Mailing_Country_Code__c=&#39;LT&#39; || Mailing_Country_Code__c=&#39;ES&#39; || Mailing_Country_Code__c=&#39;AU&#39; || Mailing_Country_Code__c=&#39;ZA&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country NOT Eligible for Emails</label>
    <type>Checkbox</type>
</CustomField>