force-app/main/default/objects/Participant__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Participant&#39;s Last Name can be removed from layout for PI compliance purposes</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Participant&#39;s Last Name</inlineHelpText>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>