force-app/main/default/objects/Participant__c/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Mailing City</label>
    <length>80</length>

    <type>Text</type>
</CustomField>