force-app/main/default/objects/Participant__c/fields/Mailing_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Country_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Country Code</label>
    <length>2</length>

    <type>Text</type>
</CustomField>