force-app/main/default/objects/Participant__c/fields/Mailing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State_Province__c</fullName>
    <label>Mailing State/Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>