force-app/main/default/objects/Participant__c/fields/Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Mailing Street</label>
    <length>255</length>

    <type>Text</type>
</CustomField>