force-app/main/default/objects/Participant__c/fields/Marketing_Flag__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Flag__c</fullName>
    <formula>Secondary_Source__c = &quot;23&amp;Me&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Block Marketing</label>
    <type>Checkbox</type>
</CustomField>