force-app/main/default/objects/Participant__c/fields/Participant_Dropped_Out__c.field-meta.xml
<CustomField>
    <fullName>Participant_Dropped_Out__c</fullName>
    <label>Participant Dropped Out</label>
    <type>Date</type>
</CustomField>