force-app/main/default/objects/Participant__c/fields/Participant_File_Names__c.field-meta.xml
<CustomField>
    <fullName>Participant_File_Names__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Participant File Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>