force-app/main/default/objects/Participant__c/fields/Participant_Files_Size__c.field-meta.xml
<CustomField>
    <fullName>Participant_Files_Size__c</fullName>
    <label>Participant Files Size (MB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>