force-app/main/default/objects/Participant__c/fields/Participation_Complete__c.field-meta.xml
<CustomField>
    <fullName>Participation_Complete__c</fullName>
    <label>Participation Complete</label>
    <type>Date</type>
</CustomField>