force-app/main/default/objects/Participant__c/fields/Pending_Payments__c.field-meta.xml
<CustomField>
    <fullName>Pending_Payments__c</fullName>
    <label>Pending Payments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>