force-app/main/default/objects/Participant__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Phone</label>

    <type>Phone</type>
</CustomField>