force-app/main/default/objects/Participant__c/fields/Present_Age__c.field-meta.xml
<CustomField>
    <fullName>Present_Age__c</fullName>
    <formula>FLOOR(Age__c) + FLOOR(((((Age__c - FLOOR(Age__c))*1000)+ TODAY() - DATEVALUE( CreatedDate))/365))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Present Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>