force-app/main/default/objects/Participant__c/fields/PSE_Count__c.field-meta.xml
<CustomField>
    <fullName>PSE_Count__c</fullName>
    <label>PSE Count</label>
    <summaryFilterItems>
        <field>Participant_Study_Enrollment__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Dropped, On Hold</value>
    </summaryFilterItems>
    <summaryForeignKey>Participant_Study_Enrollment__c.Participant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>