force-app/main/default/objects/Participant__c/fields/Secondary_Source__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Source__c</fullName>
    <label>Participant Referral Sources</label>
    <length>255</length>
    <type>Text</type>
</CustomField>