force-app/main/default/objects/Participant__c/fields/Site__c.field-meta.xml
<CustomField>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>Participants</relationshipName>
        <type>Lookup</type>
</CustomField>