force-app/main/default/objects/Participant__c/fields/Study_Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Study_Enrollment_Status__c</fullName>
    <formula>IF(PSE_Count__c  &gt; 0, &quot;Active&quot;, &quot;Inactive&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study Enrollment Status</label>
    <type>Text</type>
</CustomField>