force-app/main/default/objects/Participant__c/fields/Treatment_Period_Started__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Period_Started__c</fullName>
    <label>Treatment Period Started</label>
    <type>Date</type>
</CustomField>