force-app/main/default/objects/Participant__c/fields/Use_as_Daytime_Phone__c.field-meta.xml
<CustomField>
    <fullName>Use_as_Daytime_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Daytime Phone will be updated with Mobile Phone and Phone Type will be updated with Mobile</description>
    <label>Use as Daytime Phone</label>
    <type>Checkbox</type>
</CustomField>