force-app/main/default/objects/Participant__c/listViews/All_Participants.listView-meta.xml
<ListView>
    <fullName>All_Participants</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>All Participants</label>
</ListView>